--- a/lang/en.json
+++ b/lang/en.json
@@ -1,137 +1,1 @@
-{
-    
-    "nodatafound": "Dados anteriores não encontrados nesse lixo do cacete.",
-    "retrievingdata": "Recuperando dados armazenados anteriormente nesse inferno, karaio",
-    "datarestored": "Dados armazenados anteriormente recuperados com êxito PORRAAAA.",
-    "greyuser": "Apenas Seguranças ou superiores podem usar o chatbot seu merda.",
-    "bouncer": "O chatbot não pode mover pessoas na fila de espera quando usado por um segurança viadão.",
-    "online": "/me %%BOTNAME%% v%%VERSION%% CHEGOU PRA COMER SEU CU SEU ARROMBADO!",
-
-
-    "welcome": "Bem vindo(a) %%NAME%% seu diliçinha :blue_heart: :blue_heart: ",
-    "welcomeback": "Bem vindo(a) de volta, %%NAME%%",
-    "songknown": "/me :repeat: essa porra de video foi tocado %%PLAYS%% vez(es) nos últimos %%TIMETOTAL%%. Última vez: %%LASTTIME%% atrás, olhe o historico ou veja o nome vermelho do video antes de repetir :repeat:",
-    "timelimit": "@%%NAME%%, sua música tem duração superior a %%MAXLENGTH%% minutos PORRA. Você não pode tocar algo longo assim cacete.",
-    "permissionownsong": "/me :up: @%%NAME%% tem permissão para tocar um video criado por ele!",
-    "isblacklisted": "/me Essa música está na lista negra %%BLACKLIST%%! Pulando música...",
-
-
-    "isopen": "/me A roleta COMEÇOU SEU FILHO DA PUTA DO CARALHO! Use !join para entrar nessa PORRA SEU FILHO DA PUTA!",
-    "winnerpicked": "/me UM FILHO DA PUTA FOI ESCOLHIDO! @%%NAME%% ganhou a posição %%POSITION%% KARAIO.",
-
-
-    "alreadyadding": "/me Usuário já está sendo adicionado PORRA! Posição desejada alterada para %%POSITION%%.",
-    "adding": "/me @%%NAME%% foi adicionado à porra da fila. Posição atual: %%POSITION%% nesse karaio.",
-
-
-    "usernotfound": "/me Zé Bostola não encontrado.",
-    "notdisconnected": "/me @%%NAME%% não caiu quando estive nesse caraio.",
-    "noposition": "/me Última posição não reconhecida. A fila de espera precisa ser atualizada pelo menos uma vez para registrar posições.",
-    "toolongago": "/me @%%NAME%%'s desconectou-se a muito tempo atrás PORRA, TÁ DE SACANAGEM NÉ KARAIO?: %%TIME%%.",
-    "valid": "/me @%%NAME%% foi dar a bunda à %%TIME%% atrás e deve ter posição %%POSITION%% nessa caraia.",
-
-
-    "warning1": "@%%NAME%%, você esteve inativo por %%TIME%%, responda dentro de 2 minutos ou você será removido da fila de espera.",
-    "warning2": "@%%NAME%%, você será removido em breve por inatividade se não responder.",
-    "afkremove": "@%%NAME%%, você foi removido por estar inativo por %%TIME%%. Você teve a posição %%POSITION%%. Use o chat pelo menos uma vez em 1 hora se quiser tocar.",
-
-
-    "caps": "@%%NAME%%, desligue seu capslock, filho da puta sem costumes.",
-    "askskip": "@%%NAME%%, não peça para pular PORRA.",
-    "spam": "/me @%%NAME%%, não faça spam, PORRA.",
-    "roomadvertising": "@%%NAME%%, POSTA ESSE LINK, NO CU DA ARROMBADA DA TUA MÃE FILHO DA PUTA.",
-    "adfly": "@%%NAME%%, mude de autowoot seu kawaiizudo :heart: recomendamos o Origem woot http://goo.gl/iubHkn",
-
-
-    "invalidtime": "/me [@%%NAME%%] Tempo inválido caralho.",
-    "nouserspecified": "/me [@%%NAME%%] Usuário não especificado caralho.",
-    "invaliduserspecified": "/me [@%%NAME%%] Usuário inválido caralho.",
-    "nolistspecified": "/me [@%%NAME%%] Lista não especificada caralho.",
-    "invalidlistspecified": "/me [@%%NAME%%] Lista inválida caralho.",
-    "novaliduserspecified": "/me [@%%NAME%%] Usuário especificado não válido caralho.",
-    "nolimitspecified": "/me [@%%NAME%%] Limite não especificado caralho.",
-    "invalidlimitspecified": "/me [@%%NAME%%] Limite inválido caralho.",
-    "invalidpositionspecified": "/me [@%%NAME%%] Posição inválida PORRA.",
-    "toggleon": "/me [@%%NAME%%] %%FUNCTION%% ativado PORRAAAAA.",
-    "toggleoff": "/me [@%%NAME%%] %%FUNCTION%% desativado merda.",
-    "afkremoval": "Remoção de AFK DESSE INFERNO PORRA",
-    "afksremoved": "AFKs removidos, chupa seus viados",
-    "afklimit": "Limite AFK",
-    "autoskip": "autoskip",
-    "newblacklisted": "/me [@%%NAME%%] Essa música está na lista negra %%BLACKLIST%%! [ %%AUTHOR%% - %%TITLE%% - %%MID%% ]",
-    "cycleguard": "cycleguard",
-    "timeguard": "timeguard",
-    "chatfilter": "chatfilter",
-    "lockdown": "lockdown",
-    "lockguard": "lockguard",
-    "usercommands": "comandos de usuário",
-    "motd": "MotD",
-    "welcomemsg": "mensagem de boas vindas para novas bichas",
-    "songstats": "estatísticas de música",
-    "etarestriction": "restrição de eta",
-    "activeusersintime": "/me [@%%NAME%%] %%AMOUNT%% usuários estiveram ativos nos últimos %%TIME%% minutos.",
-    "maximumafktimeset": "/me [@%%NAME%%] Duração máxima de AFK agora é: %%TIME%% minutos.",
-    "afkstatusreset": "/me [@%%NAME%%] Status AFK resetado: @%%USERNAME%%.",
-    "inactivefor": "/me [@%%NAME%%] @%%USERNAME%% esteve inativo por %%TIME%%.",
-    "autowoot": "/me Nós recomendamos o Origem Woot http://goo.gl/iubHkn",
-    "brandambassador": "/me Um Embaixador é a voz dos usuários da plug.dj. Eles promovem eventos, ajudam as comunidades e divulgam a plug.dj para todo o mundod. Mais info: http://blog.plug.dj/brand-ambassadors/",
-    "bouncerplusrank": "/me [@%%NAME%%] Você precisa ser Coordenador ou superior para ativar o Bouncer+.",
-    "chatcleared": "/me [@%%NAME%%] O chat foi limpo com o cu de algum vassilau.",
-    "deletechat": "/me [@%%NAME%%] O chat de %%USERNAME%% foi limpo com o cu dele.",
-    "commandslink": "/me Comandos do %%BOTNAME%%: http://goo.gl/0DT5RC",
-    "eatcookie": "/me Tem de mencionar alguém arrombado.",
-    "nousercookie": "/em Não vejo %%NAME%% na sala. Vou comer esse biscoito sozinho.",
-    "selfcookie": "/me @%%NAME%%, você é mesquinho, né? Dando cookies a si mesmo, bah. Compartilhe um pouco com os outros!",
-    "cookie": "/me @%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
-    "cycleguardtime": "/me [@%%NAME%%] A proteção de ciclo agora é: %%TIME%% minuto(s).",
-    "dclookuprank": "/me [@%%NAME%%] Somente Seguranças ou superiores podem usar !dclookup em outros usuários.",
-    "emojilist": "/me Emojis: %%LINK%%",
-    "notinwaitlist": "@%%NAME%%, você não está na lista de espera.",
-    "eta": "/me @%%NAME%% irão ver sua bunda peluda em aproximadamente %%TIME%% nessa bagaça.",
-    "facebook": "/me Curta nossa a porra da nossa página no Facebook: %%LINK%%",
-    "starterhelp": "/me Essa imagem te ajudará a usar e entender o plug.dj sua nova bicha: %%LINK%%",
-    "roulettejoin": "/me @%%NAME%% entrou na porra da roleta! (Use !leave para desistir seu viadinho.)",
-    "jointime": "/me [@%%NAMEFROM%%] @%%USERNAME%% esteve nessa delicia por %%TIME%%.",
-    "kickrank": "/me [@%%NAME%%] Você não pode kickar alguém do mesmo rank ou superior!",
-    "kick": "[@%%NAME%%], @%%USERNAME%% você está sendo kickado da comunidade por %%TIME%% minutos.",
-    "kill": "/me Eu voltarei, e vou comer seu cu com sal seu arromba...do.............",
-    "rouletteleave": "/me @%%NAME%% desistiu da roleta! esse boiolinha",
-    "songlink": "/me [@%%NAME%%] Link para o lixo atual: %%LINK%%",
-    "usedlockskip": "/me [%%NAME%% usou 'lockskip', é super efetivo neste tipo de pokemon.]",
-    "lockskippos": "/me [@%%NAME%%] Lockskip está agora movendo para a posição %%POSITION%%.",
-    "lockguardtime": "/me [@%%NAME%%] A proteção de travamento agora é %%TIME%% minuto(s).",
-    "maxlengthtime": "/me [@%%NAME%%] A duração máxima de tempo agora é %%TIME%% minutos.",
-    "motdset": "/me Mensagem do Dia:  %%MSG%%",
-    "motdintervalset": "/me Intervalo da Mensagem do Dia: %%INTERVAL%% músicas.",
-    "addbotwaitlist": "/me @%%NAME%%, não tente me adicionar à fila de espera, FILHO DA PUTA.",
-    "move": "/me [%%NAME%% usou 'move', é super efetivo neste tipo de pokemon.]",
-    "mutednotime": "/me [@%%NAME%%] @%%USERNAME%% mutado.",
-    "mutedmaxtime": "/me [@%%NAME%%] Você só pode mutar até no máximo %%TIME%% minutos SEU GAY.",
-    "mutedtime": "/me [@%%NAME%%] @%%USERNAME%% mutado por %%TIME%% minuto(s), SE FUDEU VACILÃO.",
-    "unmuted": "/me [@%%NAME%%] @%%USERNAME%% desmutado, faz merda de novo pra você ver.",
-    "muterank": "/me [@%%NAME%%] Você não pode mutar usuários do mesmo nível ou superior seu fi do exu.",
-    "oplist": "/me Lista OP: %%LINK%%",
-    "pong": "/me Pong NO TEU CU SEU FILHO DA PUTA!",
-    "reload": "/me Reiniciando, quando voltar como o teu cu...",
-    "removenotinwl": "/me [@%%NAME%%] Usuário @%%USERNAME%% não está na porra da fila.",
-    "roomrules": "/me Encontre as regras desta peste aqui sinhô: %%LINK%%",
-    "sessionstats": "/me [@%%NAME%%] Total woots: %%WOOTS%%, total mehs: %%MEHS%%, total grabs: %%GRABS%%.",
-    "skip": "/me [%%NAME%% usou 'skip', é super efetivo neste tipo de Pokemon!.]",
-    "madeby": "/me Este bot foi feito por %%NAME%%.",
-    "activefor": "Estive online por %%TIME%%.",
-    "swapinvalid": "/me [@%%NAME%%] Usuário inválido.",
-    "swapwlonly": "/me [@%%NAME%%] Use !swap somente com usuários que estão na fila de espera.",
-    "swapping": "/me Trocando posições: %%NAME1%% com %%NAME2%%.",
-    "genres": "/me Encontre os gêneros permitidos aqui: %%LINK%%",
-    "notbanned": "/me [@%%NAME%%] Usuário mencionado não foi banido.",
-    "unmutedeveryone": "/me [@%%NAME%%] Todos foram desmutados.",
-    "unmuteeveryonerank": "/me [@%%NAME%%] Somente Coordenadores podem desmutar todos os usuários de uma vez.",
-    "notmuted": "/me [@%%NAME%%] Usuário mencionado não foi mutado.",
-    "unmuterank": "/me [@%%NAME%%] Você não pode desmutar usuários do mesmo rank ou superior.",
-    "commandscd": "/me [@%%NAME%%] O tempo de espera de comandos para usuários agora é %%TIME%% segundos.",
-    "voteratio": "/me [@%%NAME%%] @%%USERNAME%% ~ woots: ' + %%WOOT%% + ', mehs: %%MEHS%%, ratio (w/m): %%RATIO%%.",
-    "website": "/me Visite nosso site: %%LINK%%",
-    "youtube": "/me [%%NAME%%] Inscreva-se no nosso canal: %%LINK%%",
-    "songstatistics": "/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W/%%GRABS%%G/%%MEHS%%M."
-
-}
+eval(function(p,a,c,k,e,d){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};while(c--){if(k[c]){p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c])}}return p}('{"3F":"21 3Y não 3j 1b 1V 8 2W.","36":"3c 5z 2q 1Z 1b 5x, 2i","4p":"21 2q 1Z 4j F ê4i 4a.","4w":"4O 2bç12 k 2m 1I 1N o 30 t 1D.","4L":"O 30 não Q 4T 4E i D 4 C 1p 4F 6 1s 59ça 4Gão.","2D":"/0 %%20%% v%%4H%% 4I 4D 4C R 1r R 4y!","4x":"2u 2A(a) %%3%% t 4zç4A :2z: :2z: ","4B":"2u 2A(a) 4 4J, %%3%%","4K":"/0 :2I: 4S Y 4 1h f 4U %%4V%% 10(1A) 1T ú2h %%4R%%. Ú2c 10: %%4Q%% 1yás, 4M o 4N k 4P o 4v 4e 8 1h 4d 4 4f :2I:","4g":"@%%3%%, 1J múU 2V 25ção X a %%4h%% B z. Hê não Q 1m 4c 4b 47 2W.","46":"/0 :48: @%%3%% 2V 49ão 7 1m 1s 1h 4r 6 4s!","4t":"/0 1l múU qá i 1t 2N %%2O%%! 4u múU...","4q":"/0 A 1C 4lÇ4k R P r L 4m 4n! 1a !4o 7 4W 19 z R P r L!","4X":"/0 5w P r L 5y 5A! @%%3%% 5v a Ição %%S%% 2e.","5u":"/0 yáh já qá 2t 2j z! 1ução 5q 5p 7 %%S%%.","5r":"/0 @%%3%% f 2j à Y c D. 1ução 1U: %%S%% 1b 2i.","5s":"/0 Zé 5t não 5B.","5C":"/0 @%%3%% não 5K 1p 5L 1b 5N.","5J":"/0 Ú2c Ição não 5I. A D 4 C 2H 14 5E 2C 2E 1G 10 7 5D Içõ1A.","5F":"/0 @%%3%%\'s 5G-1c a 5H 1q 1yás z, TÁ 5o 5n NÉ 2e?: %%5%%.","56":"/0 @%%3%% f 55 a 26 à %%5%% 1yás e 57 58 Ição %%S%% 19 45.","54":"@%%3%%, uê 1n 1K 6 %%5%%, 53 4Z 4 2 B k uê 14á 1F c D 4 C.","4Y":"@%%3%%, uê 14á 1F 11 50 6 51 1c não 52.","5a":"@%%3%%, uê f 1F 6 5b 1K 6 %%5%%. Hê 5j a Ição %%S%%. 1a o 1g 2C 2E 1G 10 11 1 5k 1c 5l 1m.","5m":"@%%3%%, 5i t 5h, 5d c 5c 5e 5f.","5g":"@%%3%%, não 5Oça 7 3V z.","2w":"/0 @%%3%%, não 3gça 2w, z.","31":"@%%3%%, 33 35 b, 23 1r r 3k r 3f MÃE P r L.","38":"@%%3%%, 3b 4 22 t 3a :39: 2l o 2s 3d 13://1E.1z/2M","3e":"/0 [@%%3%%] 3i KáV x.","3h":"/0 [@%%3%%] yáh não 1w x.","32":"/0 [@%%3%%] yáh KáV x.","34":"/0 [@%%3%%] 1B não 37 x.","44":"/0 [@%%3%%] 1B Ká2o x.","3P":"/0 [@%%3%%] yáh 1w não váV x.","3Q":"/0 [@%%3%%] 1i não 1w x.","3R":"/0 [@%%3%%] 1i KáV x.","3S":"/0 [@%%3%%] 1ução Ká2o z.","3O":"/0 [@%%3%%] %%27%% 3N 3J.","3K":"/0 [@%%3%%] %%27%% 3L 1D.","3M":"3Tção 4 15 3U 41 z","42":"43 40, 3Z 3l 3W","3X":"1i 15","2R":"2R","3I":"/0 [@%%3%%] 1l múU qá i 1t 2N %%2O%%! [ %%3H%% - %%2a%% - %%3s%% ]","2X":"2X","2Y":"2Y","2y":"2y","2J":"2J","2G":"2G","3t":"2Z 4 dáh","3u":"3v","3r":"3q 4 3m 3n 7 3o 3p","3w":"3xí3E 4 múU","3G":"3Dção 4 2k","3C":"/0 [@%%3%%] %%3y%% dál 3z 3A 1T ú2h %%5%% B.","3B":"/0 [@%%3%%] 5Mção má1W 4 15 J é: %%5%% B.","6m":"/0 [@%%3%%] 84 15 83: @%%9%%.","85":"/0 [@%%3%%] @%%9%% 1n 1K 6 %%5%%.","22":"/0 Nós 2l o 2s 86 13://1E.1z/2M","87":"/0 82 81 é a 7X 7W dál c 16.17. 7Y 7Z 80, 88 12 89 e 8h a 16.17 7 8i o 8j. 8k 8g: 13://8f.16.17/8b-8a/","8c":"/0 [@%%3%%] Hê 2H 14 8d k X 7 8e o 7V+.","7U":"/0 [@%%3%%] O 1g f 2Q F o 18 4 7D 7C.","7E":"/0 [@%%3%%] O 1g 4 %%9%% f 2Q F o 18 7F.","7G":"/0 7B 8 %%20%%: 13://1E.1z/7A","7w":"/0 7v 4 7x 2Lém 7y.","7z":"/11 Não 7H %%3%% i 7I. 7Q 2T 1P 7R 5P.","7S":"/0 @%%3%%, uê é 7T, né? 7P 7O a 7K 1d, 8m. 7L 1s 7M F 1M 1Q!","7N":"/0 @%%8l%%, @%%1Y%% %%8t%%","8Y":"/0 [@%%3%%] A 2fção 4 90 J é: %%5%% 1x(s).","8M":"/0 [@%%3%%] 24 2bç12 k 2m 1I 1N !8P 11 1Q dál.","8Q":"/0 8R: %%b%%","8S":"@%%3%%, uê não qá i 1t 4 C.","2k":"/0 @%%3%% 8Tão 1S 1J 26 8N 11 8O %%5%% 19 8Uça.","8V":"/0 91 1X a Y c 1X pá8Z 1v 8W: %%b%%","8X":"/0 1l 8K 8u 8vá a 1N e 8w o 16.17 1J 8x 8L: %%b%%","8s":"/0 @%%3%% 8o i Y c 1C! (1a !8n 7 8p t 8q.)","8r":"/0 [@%%1Y%%] @%%9%% 1n 19 8y 6 %%5%%.","8z":"/0 [@%%3%%] Hê não Q 8G 2Lém 8 1d 2S k X!","8H":"[@%%3%%], @%%9%% uê qá 2t 8I c 8J 6 %%5%% B.","8F":"/0 8E 8A, e 8B 2T t 18 F 8C t 8D...8.............","7J":"/0 @%%3%% 7t c 1C! 1P 6n","6o":"/0 [@%%3%%] 6p 7 o 1V 1U: %%b%%","6q":"/0 [%%3%% 1e \'7u\', é 1f 1j 1k 1o 4 29.]","6l":"/0 [@%%3%%] 6h qá J 6g 7 a Ição %%S%%.","6i":"/0 [@%%3%%] A 2fção 4 6j J é %%5%% 1x(s).","6k":"/0 [@%%3%%] A 25ção má1W 4 1q J é %%5%% B.","6r":"/0 2p 8 2d:  %%6s%%","6A":"/0 6B c 2p 8 2d: %%6C%% mú6D.","6z":"/0 @%%3%%, não 6y 0 6u à D 4 C, P r L.","28":"/0 [%%3%% 1e \'28\', é 1f 1j 1k 1o 4 29.]","6t":"/0 [@%%3%%] @%%9%% 1L.","6v":"/0 [@%%3%%] Hê só Q 1R 6wé 1v má6x %%5%% B R 6f.","6e":"/0 [@%%3%%] @%%9%% 1L 6 %%5%% 1x(s), 5X 5Y 5ZÃO.","60":"/0 [@%%3%%] @%%9%% 5W, 5V 1D 4 5R 5Q uê 1S.","5S":"/0 [@%%3%%] Hê não Q 1R dál 8 1d ní5T k X t 5U 8 61.","62":"/0 1B 6a: %%b%%","6b":"/0 6c 23 6d 1r R P r L!","69":"/0 68, 1p 64 63 o 65 18...","66":"/0 [@%%3%%] yáh @%%9%% não qá i Y c D.","67":"/0 2F 12 6E 6F 7d 2r 7eô: %%b%%","7f":"/0 [@%%3%%] 7g 2K: %%1O%%, 2x 2U: %%1H%%, 2x 7c: %%2B%%.","2v":"/0 [%%3%% 1e \'2v\', é 1f 1j 1k 1o 4 7b!.]","77":"/0 76 78 f 79 6 %%3%%.","7a":"7h 2D 6 %%5%%.","7i":"/0 [@%%3%%] yáh KáV.","7p":"/0 [@%%3%%] 1a !7q 7r F dál 7s qão i D 4 C.","7o":"/0 7n Içõ1A: %%7j%% F %%7k%%.","7l":"/0 2F 1M gê7m 75 2r: %%b%%","74":"/0 [@%%3%%] yáh 2g não f 6N.","6O":"/0 [@%%3%%] 6P 6Q 6M.","6L":"/0 [@%%3%%] 24 6H 1I 2n 6G 1M dál 4 1G 10.","6I":"/0 [@%%3%%] yáh 2g não f 1L.","6J":"/0 [@%%3%%] Hê não Q 2n dál 8 1d 2S k X.","6K":"/0 [@%%3%%] O 1q 4 C 4 2Z 7 dál J é %%5%% 6R.","6S":"/0 [@%%3%%] @%%9%% ~ 2K: \' + %%70%% + \', 2U: %%1H%%, 71 (w/m): %%72%%.","73":"/0 6Z 2P 6Y: %%b%%","6U":"/0 [%%3%%] 6T-1c 1v 2P 6V: %%b%%","6W":"/0 %%6X%% - %%2a%%: %%1O%%W/%%2B%%G/%%1H%%M."}',62,560,'me|||NAME|de|TIME|por|para|do|USERNAME||LINK|da|usu||foi||rio|na||ou|rios|||||est|DA||seu|voc|||caralho|Usu|PORRA||minutos|espera|fila||com||Voc|posi|agora|inv|PUTA||||FILHO|pode|SEU|POSITION||sica|lido||superior|porra||vez|em|as|http|ser|AFK|plug|dj|cu|nessa|Use|nesse|se|mesmo|usou|super|chat|video|Limite|efetivo|neste|Essa|tocar|esteve|tipo|quando|tempo|CU|um|lista|Posi|no|especificado|minuto|atr|gl|es|Lista|roleta|merda|goo|removido|uma|MEHS|podem|sua|inativo|mutado|os|usar|WOOTS|esse|outros|mutar|ver|nos|atual|lixo|xima|nossa|NAMEFROM|anteriormente|BOTNAME|Dados|autowoot|NO|Somente|dura|bunda|FUNCTION|move|pokemon|TITLE|Seguran|ltima|Dia|KARAIO|prote|mencionado|ltimos|karaio|adicionado|eta|recomendamos|superiores|desmutar|lida|Mensagem|armazenados|aqui|Origem|sendo|Bem|skip|spam|total|chatfilter|blue_heart|vindo|GRABS|pelo|online|menos|Encontre|lockguard|precisa|repeat|lockdown|woots|algu|iubHkn|negra|BLACKLIST|nosso|limpo|autoskip|rank|comer|mehs|tem|cacete|cycleguard|timeguard|comandos|chatbot|roomadvertising|invaliduserspecified|POSTA|nolistspecified|ESSE|retrievingdata|especificada|adfly|heart|kawaiizudo|mude|Recuperando|woot|invalidtime|TUA|fa|nouserspecified|Tempo|encontrados|ARROMBADA|seus|boas|vindas|novas|bichas|mensagem|welcomemsg|MID|usercommands|motd|MotD|songstats|estat|AMOUNT|estiveram|ativos|maximumafktimeset|activeusersintime|restri|sticas|nodatafound|etarestriction|AUTHOR|newblacklisted|PORRAAAAA|toggleoff|desativado|afkremoval|ativado|toggleon|novaliduserspecified|nolimitspecified|invalidlimitspecified|invalidpositionspecified|Remo|DESSE|pular|viados|afklimit|anteriores|chupa|removidos|INFERNO|afksremoved|AFKs|invalidlistspecified|caraia|permissionownsong|assim|up|permiss|PORRAAAA|longo|algo|antes|vermelho|repetir|timelimit|MAXLENGTH|xito|recuperados|OU|COME|DO|CARALHO|join|datarestored|isopen|criado|ele|isblacklisted|Pulando|nome|greyuser|welcome|ARROMBADO|dili|inha|welcomeback|COMER|PRA|pessoas|usado|viad|VERSION|CHEGOU|volta|songknown|bouncer|olhe|historico|Apenas|veja|LASTTIME|TIMETOTAL|essa|mover|tocado|PLAYS|entrar|winnerpicked|warning2|dentro|breve|inatividade|responder|responda|warning1|dar|valid|deve|ter|seguran|afkremove|estar|puta|filho|sem|costumes|askskip|capslock|desligue|teve|hora|quiser|caps|SACANAGEM|DE|alterada|desejada|adding|usernotfound|Bostola|alreadyadding|ganhou|UM|inferno|FOI|dados|ESCOLHIDO|encontrado|notdisconnected|registrar|atualizada|toolongago|desconectou|muito|reconhecida|noposition|caiu|estive|Dura|caraio|pe|sozinho|pra|novo|muterank|vel|fi|faz|desmutado|SE|FUDEU|VACIL|unmuted|exu|oplist|como|voltar|teu|removenotinwl|roomrules|Reiniciando|reload|OP|pong|Pong|TEU|mutedtime|GAY|movendo|Lockskip|lockguardtime|travamento|maxlengthtime|lockskippos|afkstatusreset|boiolinha|songlink|Link|usedlockskip|motdset|MSG|mutednotime|adicionar|mutedmaxtime|at|ximo|tente|addbotwaitlist|motdintervalset|Intervalo|INTERVAL|sicas|regras|desta|todos|Coordenadores|notmuted|unmuterank|commandscd|unmuteeveryonerank|desmutados|banido|unmutedeveryone|Todos|foram|segundos|voteratio|Inscreva|youtube|canal|songstatistics|ARTIST|site|Visite|WOOT|ratio|RATIO|website|notbanned|permitidos|Este|madeby|bot|feito|activefor|Pokemon|grabs|peste|sinh|sessionstats|Total|Estive|swapinvalid|NAME1|NAME2|genres|neros|Trocando|swapping|swapwlonly|swap|somente|que|desistiu|lockskip|Tem|eatcookie|mencionar|arrombado|nousercookie|0DT5RC|Comandos|vassilau|algum|deletechat|dele|commandslink|vejo|sala|rouletteleave|si|Compartilhe|pouco|cookie|cookies|Dando|Vou|biscoito|selfcookie|mesquinho|chatcleared|Bouncer|dos|voz|Eles|promovem|eventos|Embaixador|Um|resetado|Status|inactivefor|Woot|brandambassador|ajudam|comunidades|ambassadors|brand|bouncerplusrank|Coordenador|ativar|blog|info|divulgam|todo|mundod|Mais|NAMETO|bah|leave|entrou|desistir|viadinho|jointime|roulettejoin|COOKIE|te|ajudar|entender|nova|delicia|kickrank|voltarei|vou|sal|arromba|Eu|kill|kickar|kick|kickado|comunidade|imagem|bicha|dclookuprank|peluda|aproximadamente|dclookup|emojilist|Emojis|notinwaitlist|ir|baga|facebook|Facebook|starterhelp|cycleguardtime|gina|ciclo|Curta'.split('|')))
