--- a/lang/en.json
+++ b/lang/en.json
@@ -5,13 +5,13 @@
     "datarestored": "Dados armazenados anteriormente recuperados com êxito PORRAAAA.",
     "greyuser": "Apenas Seguranças ou superiores podem usar o chatbot seu merda.",
     "bouncer": "O chatbot não pode mover pessoas na fila de espera quando usado por um segurança viadão.",
-    "online": "/me %%BOTNAME%% v%%VERSION%% CHEGOU PRA COMER SEU CU SEU ARROMBADO!",
+    "online": "/me %%BOTNAME%% v%%VERSION%% CHEGOU PRA COMER SEU CU PORRA!",
 
 
-    "welcome": "Bem vindo(a) %%NAME%% seu diliçinha :blue_heart: :blue_heart: ",
-    "welcomeback": "Bem vindo(a) de volta, %%NAME%%",
-    "songknown": "/me :repeat: essa porra de video foi tocado %%PLAYS%% vez(es) nos últimos %%TIMETOTAL%%. Última vez: %%LASTTIME%% atrás, olhe o historico ou veja o nome vermelho do video antes de repetir :repeat:",
-    "timelimit": "@%%NAME%%, sua música tem duração superior a %%MAXLENGTH%% minutos PORRA. Você não pode tocar algo longo assim cacete.",
+    "welcome": "Bem vindo(a) %%NAME%% diliçinha :blue_heart: :blue_heart: leia nossas regras para não levar ban",
+    "welcomeback": "Bem vindo(a) de volta, %%NAME%% seu delicia :green_heart:",
+    "songknown": "/me :repeat: Essa porra de video foi tocado %%PLAYS%% vez(es) nos últimos %%TIMETOTAL%%. Última vez: %%LASTTIME%% atrás, olhe o historico ou veja o nome vermelho do video antes de repetir :repeat:",
+    "timelimit": "@%%NAME%%, seu video tem duração superior a %%MAXLENGTH%% minutos PORRA. Você não pode tocar algo longo assim cacete.",
     "permissionownsong": "/me :up: @%%NAME%% tem permissão para tocar um video criado por ele!",
     "isblacklisted": "/me Essa música está na lista negra %%BLACKLIST%%! Pulando música...",
 
@@ -80,8 +80,8 @@
     "deletechat": "/me [@%%NAME%%] O chat de %%USERNAME%% foi limpo com o cu dele.",
     "commandslink": "/me Comandos do %%BOTNAME%%: http://goo.gl/0DT5RC",
     "eatcookie": "/me Tem de mencionar alguém arrombado.",
-    "nousercookie": "/em Não vejo %%NAME%% na sala. Vou comer esse biscoito sozinho.",
-    "selfcookie": "/me @%%NAME%%, você é mesquinho, né? Dando cookies a si mesmo, bah. Compartilhe um pouco com os outros!",
+    "nousercookie": "/em Não vejo este zé bostola chamado %%NAME%% nessa delicia de sala, ele deve ter ido dar o cu",
+    "selfcookie": "/me @%%NAME%%, você é safado, né? Dando essas paradas a si mesmo, bah. Compartilhe um pouco com os outros caralho!",
     "cookie": "/me @%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
     "cycleguardtime": "/me [@%%NAME%%] A proteção de ciclo agora é: %%TIME%% minuto(s).",
     "dclookuprank": "/me [@%%NAME%%] Somente Seguranças ou superiores podem usar !dclookup em outros usuários.",
