--- a/lang/en.json
+++ b/lang/en.json
@@ -39,7 +39,7 @@
     "caps": "@%%NAME%%, desligue seu capslock, filho da puta sem costumes.",
     "askskip": "@%%NAME%%, não peça para pular PORRA.",
     "spam": "/me @%%NAME%%, não faça spam, PORRA.",
-    "roomadvertising": "@%%NAME%%, POSTA ESSE LINK, NO CU DA ARROMBADA DA TUA MÃE FILHO DA PUTA.",
+    "roomadvertising": "@%%NAME%%, POSTA ESSE LINK, NO CU DA ARROMBADA DA TUA MÃE, SEU FILHO DA PUTA.",
     "adfly": "@%%NAME%%, mude de autowoot seu kawaiizudo :heart: recomendamos o Origem woot http://goo.gl/iubHkn",
 
 
@@ -84,7 +84,7 @@
     "selfcookie": "/me @%%NAME%%, você é safado, né? Dando essas paradas a si mesmo, bah. Compartilhe um pouco com os outros caralho!",
     "cookie": "/me @%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
     "cycleguardtime": "/me [@%%NAME%%] A proteção de ciclo agora é: %%TIME%% minuto(s).",
-    "dclookuprank": "/me [@%%NAME%%] Somente Seguranças ou superiores podem usar !dclookup em outros usuários.",
+    "dclookuprank": "/me [@%%NAME%%] Somente Seguranças ou superiores podem usar !dclookup em outros usuários seu viadão.",
     "emojilist": "/me Emojis: %%LINK%%",
     "notinwaitlist": "@%%NAME%%, você não está na lista de espera.",
     "eta": "/me @%%NAME%% irão ver sua bunda peluda em aproximadamente %%TIME%% nessa bagaça.",
@@ -97,14 +97,14 @@
     "kill": "/me Eu voltarei, e vou comer seu cu com sal seu arromba...do.............",
     "rouletteleave": "/me @%%NAME%% desistiu da roleta russa! esse boiolinha",
     "songlink": "/me [@%%NAME%%] Link para o lixo atual: %%LINK%%",
-    "usedlockskip": "/me [%%NAME%% usou 'lockskip', é super efetivo neste tipo de pokemon.]",
+    "usedlockskip": "/me [%%NAME%% usou 'lockskip', é super efetivo no pokemon do tipo Viadão.]",
     "lockskippos": "/me [@%%NAME%%] Lockskip está agora movendo para a posição %%POSITION%%.",
     "lockguardtime": "/me [@%%NAME%%] A proteção de travamento agora é %%TIME%% minuto(s).",
     "maxlengthtime": "/me [@%%NAME%%] A duração máxima de tempo agora é %%TIME%% minutos.",
     "motdset": "/me Mensagem do Dia:  %%MSG%%",
     "motdintervalset": "/me Intervalo da Mensagem do Dia: %%INTERVAL%% músicas.",
     "addbotwaitlist": "/me @%%NAME%%, não tente me adicionar à fila de espera, FILHO DA PUTA.",
-    "move": "/me [%%NAME%% usou 'move', é super efetivo neste tipo de pokemon.]",
+    "move": "/me [%%NAME%% usou 'move', é super efetivo no pokemon tipo Delicia.]",
     "mutednotime": "/me [@%%NAME%%] @%%USERNAME%% mutado.",
     "mutedmaxtime": "/me [@%%NAME%%] Você só pode mutar até no máximo %%TIME%% minutos SEU GAY.",
     "mutedtime": "/me [@%%NAME%%] @%%USERNAME%% mutado por %%TIME%% minuto(s), SE FUDEU VACILÃO.",
