--- a/lang/en.json
+++ b/lang/en.json
@@ -8,8 +8,8 @@
     "online": "/me %%BOTNAME%% v%%VERSION%% CHEGOU PRA COMER SEU CU PORRA!",
 
 
-    "welcome": "Bem vindo(a) %%NAME%% diliçinha :blue_heart: :blue_heart: leia nossas regras para não levar ban",
-    "welcomeback": "Bem vindo(a) de volta, %%NAME%% seu delicia :green_heart:",
+    "welcome": "Seja welcomido(a) %%NAME%% diliça :blue_heart: :blue_heart: leia nossas regras http://goo.gl/6RP5x1",
+    "welcomeback": "Senti saudades %%NAME%% diliçãu :green_heart:",
     "songknown": "/me :repeat: Essa porra de video foi tocado %%PLAYS%% vez(es) nos últimos %%TIMETOTAL%%. Última vez: %%LASTTIME%% atrás, olhe o historico ou veja o nome vermelho do video antes de repetir :repeat:",
     "timelimit": "@%%NAME%%, seu video tem duração superior a %%MAXLENGTH%% minutos PORRA. Você não pode tocar algo longo assim cacete.",
     "permissionownsong": "/me :up: @%%NAME%% tem permissão para tocar um video criado por ele!",
@@ -111,7 +111,7 @@
     "unmuted": "/me [@%%NAME%%] @%%USERNAME%% desmutado, faz merda de novo pra você ver.",
     "muterank": "/me [@%%NAME%%] Você não pode mutar usuários do mesmo nível ou superior seu fi do exu.",
     "oplist": "/me Lista OP: %%LINK%%",
-    "pong": "/me Pong NO TEU CU SEU FILHO DA PUTA!",
+    "pong": "/me Pong NO TEU CU CARALHO!",
     "reload": "/me Reiniciando, quando voltar como o teu cu...",
     "removenotinwl": "/me [@%%NAME%%] Usuário @%%USERNAME%% não está na porra da fila.",
     "roomrules": "/me Encontre as regras desta peste aqui sinhô: %%LINK%%",
